fix taack-test-minimal compilation